--- a/package.json
+++ b/package.json
@@ -9,12 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@trpc/client": "^10.45.2",
-    "@trpc/next": "^10.45.2",
-    "@trpc/react-query": "^10.45.2",
-    "@trpc/server": "^10.45.2",
     "next": "15.1.3",
-    "next-auth": "^4.24.11",
+    "next-auth": "5.0.0-beta.25",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-query": "^3.39.3",
